--- a/CoreApi/appsettings.json
+++ b/CoreApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LW-VIKNESHRAJ\\SQL2016;Initial Catalog=TestRepo;User ID=development; Password=jk"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
